WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168821
REGRESSION (
r211312
): Double-clicking a word selects it along with the space that follows it
https://bugs.webkit.org/show_bug.cgi?id=168821
Summary
REGRESSION (r211312): Double-clicking a word selects it along with the space ...
mitz
Reported
2017-02-23 21:19:28 PST
To reproduce this bug, double-click the second word in this sentence. Only the word should be selected, but instead, the word is selected along with the space that follows it.
Attachments
Patch
(16.49 KB, patch)
2017-02-25 02:11 PST
,
Wenson Hsieh
thorton
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(16.60 KB, patch)
2017-02-26 14:28 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2017-02-24 10:17:01 PST
<
rdar://problem/30690431
> Caused by <
https://trac.webkit.org/r211312
>, the fix for
bug 167530
.
mitz
Comment 2
2017-02-24 14:39:36 PST
Wenson Hsieh found the problem: “adding smartInsertDeleteEnabled to WebPageCreationParameters::encode and WebPageCreationParameters::decode fixes the problem for me”.
Wenson Hsieh
Comment 3
2017-02-25 02:11:43 PST
Created
attachment 302756
[details]
Patch
Wenson Hsieh
Comment 4
2017-02-26 14:21:47 PST
Comment on
attachment 302756
[details]
Patch Thanks Tim!
WebKit Commit Bot
Comment 5
2017-02-26 14:23:40 PST
Comment on
attachment 302756
[details]
Patch Rejecting
attachment 302756
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 302756, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: s/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj.rej patching file Tools/TestWebKitAPI/Tests/WebKit2Cocoa/double-click-does-not-select-trailing-space.html patching file Tools/TestWebKitAPI/Tests/mac/WKWebViewSelectionTests.mm patching file Tools/TestWebKitAPI/cocoa/TestWKWebView.h patching file Tools/TestWebKitAPI/cocoa/TestWKWebView.mm Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Tim Horton']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/3198114
Wenson Hsieh
Comment 6
2017-02-26 14:28:48 PST
Created
attachment 302791
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2017-02-26 15:08:45 PST
Comment on
attachment 302791
[details]
Patch for landing Clearing flags on attachment: 302791 Committed
r213012
: <
http://trac.webkit.org/changeset/213012
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug